<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="1">
    <LinearLayout android:id="@+id/linearLayout2" android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:layout_marginTop="10dp" android:layout_width="263dp">
        <TextView android:id="@+id/labelInfo" android:text="@string/labelInfo" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
        <TextView android:id="@+id/dateText" android:text="@string/dateText" android:textStyle="bold" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_marginLeft="5dp"></TextView>
    </LinearLayout>
    <LinearLayout android:id="@+id/linearLayout3" android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:layout_width="270dp">
            <RadioGroup android:layout_width="wrap_content" android:id="@+id/radioGroup1" android:layout_height="wrap_content">
                <RadioButton android:layout_height="wrap_content" android:checked="true" android:text="@string/rbOtText" android:layout_width="wrap_content" android:id="@+id/radioOt"></RadioButton>
                <RadioButton android:layout_height="wrap_content" android:text="@string/rbNtText" android:layout_width="wrap_content" android:id="@+id/radioNt"></RadioButton>
            </RadioGroup>
    </LinearLayout>
		<EditText android:id="@+id/bibleText" android:inputType="textMultiLine" android:layout_gravity="center_horizontal" android:layout_width="270dp" android:editable="false" android:layout_height="212dp"></EditText>
		<LinearLayout android:id="@+id/linearLayout1" android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:baselineAligned="true" android:layout_width="266dp" android:layout_marginTop="10dp">
			<Button android:id="@+id/buttonDone" android:textStyle="bold" android:textColor="#ff0000" android:layout_gravity="center_horizontal" android:layout_height="wrap_content" android:text="@string/buttonDone" android:layout_weight="1" android:layout_width="0dp" android:layout_marginRight="5dp"></Button>
			<Button android:id="@+id/buttonPref" android:layout_gravity="center_horizontal" android:layout_height="wrap_content" android:text="@string/buttonPreferences" android:layout_weight="1" android:layout_width="0dp" android:layout_marginLeft="5dp"></Button>
		</LinearLayout>
		<LinearLayout android:id="@+id/linearLayout6" android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:layout_width="261dp" android:layout_marginTop="10dp">
			<TextView android:layout_height="wrap_content" android:id="@+id/textCompletedDays" android:layout_width="wrap_content" android:text="@string/textCompletedDays"></TextView>
			<TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textStyle="bold" android:text="0" android:layout_marginLeft="5dp" android:id="@+id/textCompletedValue"></TextView>
		</LinearLayout>
		<LinearLayout android:id="@+id/linearLayout7" android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:layout_width="262dp">
			<TextView android:layout_height="wrap_content" android:id="@+id/textMissedDays" android:layout_width="wrap_content" android:text="@string/textMissedDays"></TextView>
			<TextView android:layout_height="wrap_content" android:id="@+id/textMissedValue" android:textStyle="bold" android:text="0" android:layout_width="wrap_content" android:layout_marginLeft="5dp"></TextView>
		</LinearLayout>
		<LinearLayout android:id="@+id/linearLayout8" android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:layout_width="261dp">
			<TextView android:layout_height="wrap_content" android:id="@+id/textPeopleDid" android:layout_width="wrap_content" android:text="@string/textPeopleDid"></TextView>
			<TextView android:layout_height="wrap_content" android:textStyle="bold" android:text="0" android:layout_width="wrap_content" android:layout_marginLeft="5dp" android:id="@+id/textWorldValue"></TextView>
		</LinearLayout>
</LinearLayout>
